--- a/print-me2.html
+++ b/print-me2.html
@@ -48,9 +48,27 @@
   class ol {
     padding-left: 2em;
   }
-  block {
+  block,
+  case {
     white-space: pre;
     font-family: monospace;
+  }
+
+  case {
+    display: block;
+    float: left;
+    /* max-height: 20em; */
+    /* overflow: hidden; */
+  }
+  captian > case,
+  ol.switch captian > li.case {
+    float: none;
+  }
+  ol.switch {
+    clear: both;
+  }
+  ol.switch li.case {
+    float: left;
   }
   pre {
     display: block;
@@ -469,77 +487,7 @@
 <group>
 <captian><pre>
   each(s.split(''), function(c) {
-    <a id="BREAKIN" href="#BREAKOUT">&Lt;breakout&Gt;</a>
-  }
-</pre></captian>
-</group>
-<group>
-<captian><block>  if (word) {
-    switch (true) {
-      case number.test(word):
-        word = parseInt(word);
-        break;
-      case keyword.test(word):
-        word = new Keyword(word.substr(1));
-        break;
-      case /^.+$/.test(word):
-        word = new Symbol(word);
-        break;
-    }
-
-    while (arry.peek(stack) == SingleQ) {
-      stack.pop();
-      count--;
-      word = new Quoted(word);
-    }
-
-    stack.push(word);
-    count++;
-    word = null;
-  }
-</block></captian>
-<captian><block>  if (depth == 0) {
-    let d = stack.length - progress;
-    if (d > 1) {
-      word = stack.pop();
-      d--;
-      count--;
-
-      list = new List(word);
-
-      for (; d > 0; d--) {
-        word = stack.pop()
-        if (word == SingleQ) {
-          let q = new Quoted(list.peek());
-          list = list.pop();
-          list = list.push(q);
-        } else {
-          list = list.push(word);
-        }
-      }
-
-      word = null;
-      stack.push(list);
-      list = null;
-    }
-    progress = stack.length; // cinch
-  }</block>
-<pre>
-
-  // return stack2;
-  // for(var w of stack) {
-  //   console.log(w.toString());
-  // }
-  return stack;</pre>
-</captian></group></group>
-<pre style="clear:both;">}</pre>
-</function>
-
-
-<div style="clear: both;">
-<label  style="display: block;"><a id="BREAKOUT" href="#BREAKIN">&Gt;BREAKIN&Lt;</a></label>
-
-<captian><pre>
+<div style="clear: both;"><captian><pre>
     if (stropen) {
       word += c;
       if (c == '"') {
@@ -560,8 +508,9 @@
 
     switch (c) {
 </pre></captian>
-<group>
-<captian><pre>
+
+
+<group><captian><pre>
       case '(':
         stack.push(LParen);
         depth++;
@@ -714,7 +663,7 @@
         count++;
         glider = null;
         break;
-</pre></captian><captian><pre>
+</pre></captian><captian><syntax-case>
       case ' ':
       case "\n":
       case ',':
@@ -846,7 +795,7 @@
         break;
         // case '\':
 
-</pre></captian><captian><pre>
+</syntax-case></captian><captian><pre>
       case '%':
         comment = true;
         break;
@@ -862,19 +811,453 @@
           word = c;
           // count += 1;
         }
-    </pre></captian></group>
+</pre></captian></group>
+
+
 <pre style="clear:both;">    } /* ** END CASE ** */</pre>
 <group><captian><pre>
     if (c && c != ' ' && c != ';')
       lc = c;
 </pre></captian></group>
 <pre style="clear:both;">  }); /* ** END EACH ** */</pre>
-<group>
-<captian><pre>
-  </pre>
-</captian>
-</group>
 </div>
-</div>
+</pre></captian></group>
+<group><captian><block>  if (word) {
+    switch (true) {
+      case number.test(word):
+        word = parseInt(word);
+        break;
+      case keyword.test(word):
+        word = new Keyword(word.substr(1));
+        break;
+      case /^.+$/.test(word):
+        word = new Symbol(word);
+        break;
+    }
+
+    while (arry.peek(stack) == SingleQ) {
+      stack.pop();
+      count--;
+      word = new Quoted(word);
+    }
+
+    stack.push(word);
+    count++;
+    word = null;
+  }
+</block></captian>
+<captian><block>  if (depth == 0) {
+    let d = stack.length - progress;
+    if (d > 1) {
+      word = stack.pop();
+      d--;
+      count--;
+
+      list = new List(word);
+
+      for (; d > 0; d--) {
+        word = stack.pop()
+        if (word == SingleQ) {
+          let q = new Quoted(list.peek());
+          list = list.pop();
+          list = list.push(q);
+        } else {
+          list = list.push(word);
+        }
+      }
+
+      word = null;
+      stack.push(list);
+      list = null;
+    }
+    progress = stack.length; // cinch
+  }</block>
+<pre>
+
+  // return stack2;
+  // for(var w of stack) {
+  //   console.log(w.toString());
+  // }
+  return stack;</pre>
+</captian></group></group>
+<pre style="clear:both;">}</pre>
+</function>
 
 <pre style="clear:both;"> })(); </pre>
+
+
+<page-break></page-break>
+
+    <a id="BREAKIN" href="#BREAKOUT">&Lt;breakout&Gt;</a>
+<label  style="display: block;"><a id="BREAKOUT" href="#BREAKIN">&Gt;BREAKIN&Lt;</a></label>
+
+
+
+
+<ol class="switch">
+  <captian>
+  <li class="case">
+      case '(':
+        stack.push(LParen);
+        depth++;
+        counts.push(count);
+        count = 0;
+        break;
+  </li><li class="case">
+      case '[':
+        stack.push(LBrack);
+        depth++;
+        counts.push(count);
+        count = 0;
+        break;
+  </li> <li class="case">
+      case "'":
+        stack.push(SingleQ);
+        count++;
+        break;
+  </li> </captian> <captian> <li class="case">
+      case '"':
+        stropen = true;
+        word = c;
+        // count++;
+        // stack.push(DoubleQ);
+        break;
+  </li> <li class="case">
+      case ')':
+
+        ...
+  </li> <li class="case">
+      case ']':
+        ...
+  </li>
+  </captian>
+  <li class="case">
+      case ' ':
+      case "\n":
+      case ',':
+        ...
+  </li> <li class="case">
+      case '%':
+        comment = true;
+        break;
+      case '/':
+        if (lc == '/') {
+          comment = true;
+        }
+        break;
+      default:
+        if (word) {
+          word += c;
+        } else {
+          word = c;
+          // count += 1;
+        }
+  </li>
+</ol>
+
+
+
+<group><captian><pre>
+    switch (c) {
+      case '(':
+        stack.push(LParen);
+        depth++;
+        counts.push(count);
+        count = 0;
+        break;
+      case '[':
+        stack.push(LBrack);
+        depth++;
+        counts.push(count);
+        count = 0;
+        break;
+      case "'":
+        stack.push(SingleQ);
+        count++;
+        break;
+      case '"':
+        stropen = true;
+        word = c;
+        // count++;
+        // stack.push(DoubleQ);
+        break;
+</pre></captian><captian><pre>
+      case ')':
+        if (typeof word == "string") {
+          switch (true) {
+            case number.test(word):
+              word = parseInt(word);
+              break;
+            case /^(\d+)?\.\d+$/.test(word):
+              word = parseFloat(word);
+              break;
+            case keyword.test(word):
+              word = new Keyword(word.substr(1));
+              break;
+            case /^\"(.*)\"$/.test(word):
+              // strip quotes
+              word = /^\"(.*)\"$/.exec(word)[1];
+              break;
+            case /^.+$/.test(word):
+              word = new Symbol(word);
+          }
+        }
+
+        if (word == null) word = stack.pop();
+        if (word == LParen) {
+          // stack.push(new List)
+          stack.push(emptyList);
+          word = null;
+          break;
+        }
+
+        while (arry.peek(stack) == SingleQ) {
+          stack.pop()
+          count--;
+          word = new Quoted(word);
+        }
+
+        list = new List(word);
+
+        word = stack.pop();
+        count--;
+        while (word !== LParen) {
+          list = list.push(word);
+          // skip spaces
+          // if(arry.peek(stack) == Space)
+          //   stack.pop()
+          word = stack.pop();
+          count--;
+        }
+
+        while (arry.peek(stack) == SingleQ) {
+          stack.pop();
+          count--;
+          list = new Quoted(list);
+        }
+
+        depth--;
+        count = counts.pop();
+        word = null;
+        stack.push(list);
+        count++;
+        list = null;
+        break;
+</pre></captian><captian><pre>
+      case ']':
+        if (typeof word == "string") {
+          // if (word) {
+          switch (true) {
+            case number.test(word):
+              word = parseInt(word);
+              break;
+            case /^(\d+)?\.\d+$/.test(word):
+              word = parseFloat(word);
+              break;
+            case keyword.test(word):
+              word = new Keyword(word.substr(1));
+              break;
+            case /^\"(.*)\"$/.test(word): //string
+              word = /^\"(.*)\"$/.exec(word)[1];
+              break;
+            case /^.+$/.test(word):
+              word = new Symbol(word);
+          }
+        }
+
+        if (word == null) {
+          word = stack.pop();
+          count--;
+        }
+        if (word == LBrack) {
+          // stack.push(new Glider);
+          stack.push(emptyGlider);
+          depth--;
+          word = null;
+          break;
+        }
+
+        while (arry.peek(stack) == SingleQ) {
+          stack.pop()
+          count--;
+          word = new Quoted.new(word)
+        }
+
+        tmp = [];
+        while (word !== LBrack) {
+          tmp.push(word);
+          // skip spaces
+          // if(arry.peek(stack) == Space)
+          //   stack.pop()
+          word = stack.pop();
+          count--;
+        }
+        word = null;
+
+        glider = new Glider(tmp.pop());
+        while (tmp.length > 0) {
+          glider = glider.push(tmp.pop());
+        }
+
+        while (arry.peek(stack) == SingleQ) {
+          stack.pop();
+          count--;
+          glider = new Quoted(glider);
+        }
+
+        depth--;
+        count = counts.pop();
+        stack.push(glider);
+        count++;
+        glider = null;
+        break;
+</pre></captian><captian><syntax-case>
+      case ' ':
+      case "\n":
+      case ',':
+        // if (word) { // clear word
+        if (typeof word == "string") {
+          switch (true) {
+            case number.test(word):
+              word = parseInt(word);
+              break;
+            case /^(\d+)?\.\d+$/.test(word):
+              word = parseFloat(word);
+              break;
+            case keyword.test(word):
+              word = new Keyword(word.substr(1));
+              break;
+            case /^\"(.*)\"$/.test(word):
+              // strip quotes
+              word = /^\"(.*)\"$/.exec(word)[1];
+              break;
+            case word == 'true':
+              word = true;
+              break;
+            case word == 'false':
+              word = false;
+              break;
+            case /^.+$/.test(word):
+              word = new Symbol(word);
+          }
+
+          if (depth > 0)
+
+            while (arry.peek(stack) == SingleQ) {
+              stack.pop()
+              count--;
+              word = new Quoted(word)
+            }
+
+          if (word) {
+            stack.push(word);
+            count++;
+            word = null;
+          }
+          // stack.push(Space);
+        }
+        if (c == "\n" && lc != ',') {
+          // if (depth == 0 && count > 1) {
+          if (depth == 0) {
+            let d = stack.length - progress;
+            if (d > 1) {
+              // implied list
+              word = stack.pop();
+              d--;
+              count--;
+
+              // while (arry.peek(stack) == SingleQ) {
+              //  stack.pop()
+              //  word = new Quoted(word);
+              //  count--;
+              // }
+
+              list = new List(word);
+
+              // while(count > 0) {
+              //   word = stack.pop();
+              //   count--;
+              //   list = list.push(word);
+              // }
+              for (; d > 0; d--) {
+                word = stack.pop()
+                //   // list.push(stack.pop());
+                if (word == SingleQ) {
+                  let q = new Quoted(list.peek());
+                  list = list.pop();
+                  list = list.push(q);
+                } else {
+                  list = list.push(word);
+                }
+                //
+              }
+
+              word = null;
+              stack.push(list);
+              list = null;
+            }
+            progress = stack.length; // cinch
+          }
+          // count = 0;
+          // xstack.push(stack.pop())
+          // while (stack.length!=0){
+          // stack2.push(stack.shift())
+          // }
+        }
+
+        // if (c==',')
+        // comma = true;
+
+        break;
+        //case ".":
+        if (word) {
+          switch (true) {
+            case /^\d+\.$/.test(word):
+            case /^:.+$/.test(word):
+              word += c;
+              return;
+            case /^.+$/.test(word):
+              stack.push(new Symbol(word));
+              word = null;
+              stack.push(Dot);
+              count += 2;
+              return;
+          }
+        } else {
+          word = c;
+        }
+        break;
+        //case '/':
+        if (word) {
+          if (arry.peek(stack) != Slash) {
+            stack.push(new Symbol(word));
+            word = null;
+            stack.push(Slash);
+            count += 2;
+          } else {
+            word += c;
+          }
+        } else {
+          word = c;
+        }
+        break;
+        // case '\':
+
+</syntax-case></captian><captian><pre>
+      case '%':
+        comment = true;
+        break;
+      case '/':
+        if (lc == '/') {
+          comment = true;
+        }
+        break;
+      default:
+        if (word) {
+          word += c;
+        } else {
+          word = c;
+          // count += 1;
+        }
+</pre></captian></group>
+<pre style="clear:both;">    } /* ** END CASE ** */</pre>
