--- a/🌻.html
+++ b/🌻.html
@@ -82,9 +82,9 @@
   </div>
 
 
-  <script src="../bubblescript.js"
+  <script src="bubblescript.js"
     type='text/javascript'></script>
-  <script src="tushie.bubls"
+  <script src="🌻.bubls"
     type="text/bubblescript"></script>
   </body>
 </html>
